--- a/src/components/Gallery.css
+++ b/src/components/Gallery.css
@@ -7,11 +7,10 @@
   color: rgba(249, 12, 225, 0.915);
   font-family: Arial, sans-serif;
 }
-/* 
+
 .gallery-container {
-  padding: 40px 20px;
-  background-color: #f0f8ff;
-} */
+  background-color: #b2eef92d;
+}
 
 .gallery-title {
   text-align: center;
